tests/transpiler/x/fs/list_set_ops.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/transpiler/x/fs/list_set_ops.fs(4,23): error FS0003: This value is not a function and cannot be applied

/workspace/mochi/tests/transpiler/x/fs/list_set_ops.fs(5,23): error FS0003: This value is not a function and cannot be applied

/workspace/mochi/tests/transpiler/x/fs/list_set_ops.fs(6,23): error FS0003: This value is not a function and cannot be applied

/workspace/mochi/tests/transpiler/x/fs/list_set_ops.fs(7,35): error FS0003: This value is not a function and cannot be applied
